feat: 添加QR码生成功能并重构为Tab切换结构
- 添加QR码生成工具类 (qrCodeGenerator.ts)
- 添加QR码预览组件 (QRCodePreview.tsx)
- 重构BarcodeGenerator组件为Tab切换结构（条形码/二维码）
- 更新UI组件导入路径为 @teable/ui-lib/shadcn
- 重命名SimpleLinkConverter为BarcodeGenerator
- 添加QR码相关国际化翻译
- 移除QR码边距设置功能（使用固定默认值）

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@teable/ui-lib/shadcn": ["./node_modules/@teable/ui-lib/dist/shadcn/index"],
+      "@teable/ui-lib/shadcn/*": ["./node_modules/@teable/ui-lib/dist/shadcn/*"]
     },
     "types": ["node", "@types/estree", "@types/estree-jsx"]
   },
