--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@teable/sdk": "^1.10.0",
     "@teable/ui-lib": "latest",
     "@types/jsbarcode": "^3.11.4",
+    "@types/qrcode": "^1.5.6",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "i18next": "23.10.1",
     "jsbarcode": "^3.12.1",
     "next": "14.2.14",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "14.1.0",
